spacing fixes

--- a/css/home.css
+++ b/css/home.css
@@ -38,22 +38,24 @@
 /* DISPLAY GRID */
 
 .cardInfo {
-    padding: 1rem;
     display: grid;
-    width: 300px;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 20%, 70%, 10%;
+    width: 75%;
+    max-width: 400px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr;
     column-gap: 1rem;
     align-self: center;
     justify-self: center;
     border: 2px solid black;
     border-radius: 5px;
+    background-color: rgba(67, 122, 142, .4);
 }
 
 .cardName {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     justify-self: center;
+    align-self: center;
 }
 
 /*
@@ -63,11 +65,16 @@
 }
 */
 
-.checkbox {
+.checkboxContainer {
     grid-column: 1 / 2;
-    grid-row: 2 / 4;
-    justify-self: center;
-    align-self: center;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox {
+    
     transform: scale(3);
 }
 
@@ -78,16 +85,34 @@
 .cardImg {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
-    height: 150px;
+    max-width: 100%;
+    height: auto;
+    padding-right: 1rem;
     justify-self: center;
+    align-self: center;
+    padding-top: 1rem;
 }
 
 .cardLink {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
     justify-self: center;
+    width: 100%;
+    text-align: center;
+    margin-top: 1rem;
     padding-top: 1rem;
-    color: var(--color-cyan);
+    padding-bottom: 1rem;
+    color: var(--color-darkRed);
+    border-top: 2px solid rgba(0, 0, 0, .3);
+    background-color: rgb(223, 233, 236);
+    text-decoration: none;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.cardLink:hover {
+    background-color: var(--color-darkRed);
+    color: white;
 }
 
 .cardInfo + .cardInfo {
