--- a/css/partials/global.css
+++ b/css/partials/global.css
@@ -3,7 +3,7 @@
     --font-headings: "Zalando Sans SemiExpanded", sans-serif;
     --font-paragraphs: "Zalando Sans", sans-serif;
 
-    --color-blue: #437C90;
+    --color-blue: #437a8e;
     --color-cyan: #255957;
     --color-darkRed: #710627;
     --color-lightRed: #9E1946;
